--- a/app/src/main/res/layout/adapter_activity_maestro_alumnos.xml
+++ b/app/src/main/res/layout/adapter_activity_maestro_alumnos.xml
@@ -34,10 +34,10 @@
                 android:id="@+id/textView5"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="204dp"
                 android:layout_marginTop="8dp"
+                android:layout_marginEnd="60dp"
                 android:text="Falta"
-                app:layout_constraintStart_toEndOf="@+id/txt_primario"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
