--- a/app/src/main/res/layout/adapter_activity_maestro_trabajos.xml
+++ b/app/src/main/res/layout/adapter_activity_maestro_trabajos.xml
@@ -6,10 +6,9 @@
     android:layout_height="wrap_content">
 
     <androidx.cardview.widget.CardView
-        android:id="@+id/cardView"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        app:cardBackgroundColor="#2EFFFFFF"
+        android:layout_height="49dp"
+        app:cardBackgroundColor="#906C6C6C"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -19,48 +18,37 @@
             android:layout_height="match_parent">
 
             <TextView
-                android:id="@+id/textActivity"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="68dp"
+                android:id="@+id/txt_primario"
+                android:layout_width="117dp"
+                android:layout_height="25dp"
+                android:layout_marginStart="60dp"
                 android:layout_marginTop="12dp"
-                android:text="Titulo"
-                android:textColor="@color/colorPrimary"
-                android:textSize="20sp"
+                android:paddingBottom="5sp"
+                android:text="actividad 1"
+                android:textColor="#FFFFFF"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                tools:text="Titulo" />
+                tools:text="actviidad 1" />
 
-            <TextView
-                android:id="@+id/textView2"
+            <RadioButton
+                android:id="@+id/radioButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="104dp"
-                android:layout_marginTop="16dp"
-                android:text="Asignar"
-                app:layout_constraintStart_toEndOf="@+id/textActivity"
-                app:layout_constraintTop_toTopOf="parent"
-                tools:text="Asignar" />
+                android:layout_marginStart="52dp"
+                android:layout_marginTop="8dp"
+                app:layout_constraintStart_toEndOf="@+id/txt_primario"
+                app:layout_constraintTop_toTopOf="parent" />
 
-            <TextView
-                android:id="@+id/textView4"
+            <RadioButton
+                android:id="@+id/radioButton2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="40dp"
-                android:layout_marginTop="16dp"
-                android:text="Editar"
-                app:layout_constraintStart_toEndOf="@+id/textView2"
-                app:layout_constraintTop_toTopOf="parent"
-                tools:text="Editar" />
+                android:layout_marginStart="44dp"
+                android:layout_marginTop="8dp"
+                app:layout_constraintStart_toEndOf="@+id/radioButton"
+                app:layout_constraintTop_toTopOf="parent" />
+
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.cardview.widget.CardView>
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rvHijo"
-        android:layout_width="403dp"
-        android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/cardView"
-        tools:listitem="@layout/adapter_activity_maestro_trabajos_actividades" />
 </androidx.constraintlayout.widget.ConstraintLayout>
