--- a/app/src/main/res/layout/activity_popup_anadirguia.xml
+++ b/app/src/main/res/layout/activity_popup_anadirguia.xml
@@ -10,7 +10,7 @@
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="150dp"
         android:background="#9EF8EDED"
         android:backgroundTint="#FFFFFF"
         app:cardCornerRadius="5dp">
@@ -25,19 +25,28 @@
                 android:id="@+id/textViewAdjuntarArchivo"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"
                 android:drawableLeft="@android:drawable/ic_menu_upload_you_tube"
                 android:text="@string/textViewAdjuntarArchivo"
                 android:textColor="#00B8D4"
                 android:textSize="24sp" />
 
             <TextView
-                android:id="@+id/textViewSacarFoto"
+                android:id="@+id/textView9"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:drawableLeft="@android:drawable/ic_menu_camera"
-                android:text="@string/textViewSacarFoto"
-                android:textColor="#00B8D4"
-                android:textSize="24sp" />
+                android:layout_marginBottom="30dp"
+                android:text="Nombre archivo..."
+                android:textColor="#000000" />
+
+            <Button
+                android:id="@+id/btn_aceptar"
+                style="@style/btn_normal"
+                android:layout_width="100dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="Aceptar" />
+
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 </LinearLayout>
