--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -19,6 +19,13 @@
         <item name="android:textStyle">bold</item>
     </style>
 
+    <style name="btn_normal" parent="android:Widget.Button">
+        <item name="android:background">@drawable/button_nofill</item>
+        <item name="android:textColor">#000000</item>
+        <item name="android:textSize">19sp</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
     <style name="btn_nada" parent="android:Widget.Button">
         <item name="android:background">@drawable/button_nada</item>
 
