--- a/app/src/main/res/layout/activity_popup_agregaralumno.xml
+++ b/app/src/main/res/layout/activity_popup_agregaralumno.xml
@@ -102,6 +102,12 @@
                     android:layout_marginTop="10dp" />
             </FrameLayout>
 
+            <LinearLayout
+                android:id="@+id/container"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical"></LinearLayout>
+
             <Button
                 android:id="@+id/agregarButton"
                 style="@style/btn_sinrelleno"
