--- a/app/src/main/res/layout/adapter_activity_maestro_alumnos_asistencia.xml
+++ b/app/src/main/res/layout/adapter_activity_maestro_alumnos_asistencia.xml
@@ -41,14 +41,13 @@
                 app:layout_constraintTop_toTopOf="parent"
                 tools:text="Alumno A" />
 
-            <RadioButton
-                android:id="@+id/radioButton"
+            <CheckBox
+                android:id="@+id/checkBox1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="88dp"
-                android:layout_marginTop="8dp"
-                app:layout_constraintStart_toEndOf="@+id/txt_primario"
-                app:layout_constraintTop_toTopOf="parent" />
+                android:layout_marginEnd="60dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/txt_primario" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
