--- a/app/src/main/res/layout/adapter_activity_maestro_boleta_calificaciones.xml
+++ b/app/src/main/res/layout/adapter_activity_maestro_boleta_calificaciones.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView"
@@ -20,7 +19,7 @@
             android:layout_height="match_parent">
 
             <TextView
-                android:id="@+id/textActivityName"
+                android:id="@+id/txt_primario"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="82dp"
@@ -30,12 +29,12 @@
                 tools:text="ActivityName" />
 
             <TextView
-                android:id="@+id/textActivityGrade"
+                android:id="@+id/txt_secundario"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="92dp"
                 android:layout_marginTop="19dp"
-                app:layout_constraintStart_toEndOf="@+id/textActivityName"
+                app:layout_constraintStart_toEndOf="@+id/txt_primario"
                 app:layout_constraintTop_toTopOf="parent"
                 tools:text="81%" />
         </androidx.constraintlayout.widget.ConstraintLayout>
