--- a/app/src/main/res/layout/activity_main_maestro_creacioncquiz.xml
+++ b/app/src/main/res/layout/activity_main_maestro_creacioncquiz.xml
@@ -9,12 +9,12 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvPadre"
-        android:layout_width="371dp"
-        android:layout_height="401dp"
+        android:layout_width="370dp"
+        android:layout_height="455dp"
         android:layout_marginStart="20dp"
-        android:layout_marginTop="28dp"
+        android:layout_marginTop="4dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView7"
+        app:layout_constraintTop_toBottomOf="@+id/txtv_añadirNPR"
         tools:listitem="@layout/adapter_activity_maestro_trabajos_edicioncquiz" />
 
     <ImageView
@@ -88,18 +88,6 @@
         app:layout_constraintTop_toBottomOf="@+id/imageView18"
         app:srcCompat="@drawable/add_blue_ehl" />
 
-    <TextView
-        android:id="@+id/textView7"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="24dp"
-        android:text="Ingresar nombre del CQuiz:"
-        android:textColor="#FFFFFF"
-        android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtv_añadirNPR" />
-
     <Button
         android:id="@+id/button3"
         style="@style/btn_sinrellenomenu"
@@ -111,16 +99,4 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/rvPadre" />
 
-    <EditText
-        android:id="@+id/edt_nombre"
-        android:layout_width="193dp"
-        android:layout_height="38dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="16dp"
-        android:backgroundTint="#00BCD4"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:textSize="18sp"
-        app:layout_constraintStart_toEndOf="@+id/textView7"
-        app:layout_constraintTop_toBottomOf="@+id/txtv_añadirNPR" />
 </androidx.constraintlayout.widget.ConstraintLayout>
