--- a/app/src/main/res/layout/activity_main_maestro_trabajos.xml
+++ b/app/src/main/res/layout/activity_main_maestro_trabajos.xml
@@ -34,26 +34,15 @@
                 tools:text="Titulo" />
 
             <TextView
-                android:id="@+id/textView2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="104dp"
-                android:layout_marginTop="16dp"
-                android:text="Asignar"
-                app:layout_constraintStart_toEndOf="@+id/textActivity"
-                app:layout_constraintTop_toTopOf="parent"
-                tools:text="Asignar" />
-
-            <TextView
                 android:id="@+id/textView4"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="40dp"
-                android:layout_marginTop="16dp"
-                android:text="Editar"
-                app:layout_constraintStart_toEndOf="@+id/textView2"
-                app:layout_constraintTop_toTopOf="parent"
-                tools:text="Editar" />
+                android:layout_marginTop="4dp"
+                android:layout_marginEnd="100dp"
+                android:text="Borrar"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/textActivity"
+                tools:text="Borrar" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.cardview.widget.CardView>
@@ -85,26 +74,14 @@
                 tools:text="Titulo" />
 
             <TextView
-                android:id="@+id/textView22"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="104dp"
-                android:layout_marginTop="16dp"
-                android:text="Asignar"
-                app:layout_constraintStart_toEndOf="@+id/textActivity2"
-                app:layout_constraintTop_toTopOf="parent"
-                tools:text="Asignar" />
-
-            <TextView
                 android:id="@+id/textView42"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="40dp"
-                android:layout_marginTop="16dp"
-                android:text="Editar"
-                app:layout_constraintStart_toEndOf="@+id/textView22"
-                app:layout_constraintTop_toTopOf="parent"
-                tools:text="Editar" />
+                android:layout_marginEnd="100dp"
+                android:text="Borrar"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/textActivity2"
+                tools:text="Borrar" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.cardview.widget.CardView>
@@ -217,7 +194,7 @@
         android:layout_height="214dp"
         android:layout_marginEnd="30dp"
         app:layout_constraintEnd_toEndOf="@+id/rvPadre"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.117"
         app:layout_constraintStart_toStartOf="@+id/rvPadre"
         app:layout_constraintTop_toBottomOf="@+id/cardView2"
         tools:listitem="@layout/adapter_activity_maestro_trabajos">
