--- a/app/src/main/res/layout/adapter_activity_maestro_trabajos_edicioncquiz.xml
+++ b/app/src/main/res/layout/adapter_activity_maestro_trabajos_edicioncquiz.xml
@@ -21,7 +21,7 @@
             android:background="#2EFFFFFF">
 
             <TextView
-                android:id="@+id/textGrupo"
+                android:id="@+id/txt_primario"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="40dp"
