--- a/app/src/main/res/layout/activity_main_maestro_trabajos.xml
+++ b/app/src/main/res/layout/activity_main_maestro_trabajos.xml
@@ -137,7 +137,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="228dp"
-        android:layout_marginTop="140dp"
+        android:layout_marginTop="130dp"
         android:text="Añadir guía"
         android:textColor="#FFFFFF"
         android:textSize="24sp"
@@ -147,10 +147,9 @@
 
     <TextView
         android:id="@+id/txtv_AñadirC"
-        android:layout_width="173dp"
-        android:layout_height="43dp"
-        android:layout_marginStart="188dp"
-        android:layout_marginTop="4dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="212dp"
         android:text="Añadir CQuiz"
         android:textColor="#FFFFFF"
         android:textSize="24sp"
@@ -171,6 +170,7 @@
         android:id="@+id/btnAddCQuiz"
         android:layout_width="30dp"
         android:layout_height="30dp"
+        android:layout_marginStart="12dp"
         app:layout_constraintStart_toEndOf="@+id/txtv_AñadirC"
         app:layout_constraintTop_toTopOf="@+id/txtv_AñadirC"
         app:srcCompat="@drawable/add_blue_ehl" />
@@ -178,7 +178,7 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvPadre"
         android:layout_width="360dp"
-        android:layout_height="186dp"
+        android:layout_height="180dp"
         android:layout_marginStart="30dp"
         android:layout_marginEnd="30dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -191,7 +191,7 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvPadre2"
         android:layout_width="364dp"
-        android:layout_height="214dp"
+        android:layout_height="180dp"
         android:layout_marginEnd="30dp"
         app:layout_constraintEnd_toEndOf="@+id/rvPadre"
         app:layout_constraintHorizontal_bias="0.117"
