--- a/app/src/main/res/layout/activity_main_alumno_c_quiz.xml
+++ b/app/src/main/res/layout/activity_main_alumno_c_quiz.xml
@@ -66,7 +66,7 @@
 
 
     <Button
-        android:id="@+id/button3"
+        android:id="@+id/buttonEntregar"
         style="@style/btn_sinrellenomenu"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
