--- a/app/src/main/res/layout/activity_main_alumno_actividades.xml
+++ b/app/src/main/res/layout/activity_main_alumno_actividades.xml
@@ -58,7 +58,7 @@
         android:layout_width="352dp"
         android:layout_height="32dp"
         android:layout_marginStart="28dp"
-        android:layout_marginTop="28dp"
+        android:layout_marginTop="1dp"
         android:layout_marginEnd="28dp"
         android:background="#2EFFFFFF"
         app:layout_constraintEnd_toEndOf="parent"
@@ -86,14 +86,45 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
     </FrameLayout>
 
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="CQuiz"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/frameLayout" />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvPadre"
         android:layout_width="313dp"
-        android:layout_height="446dp"
+        android:layout_height="210dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.297"
+        app:layout_constraintHorizontal_bias="0.285"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/frameLayout"
+        app:layout_constraintTop_toBottomOf="@+id/textView2"
+        tools:listitem="@layout/adapter_activity_alumno" >
+
+    </androidx.recyclerview.widget.RecyclerView>
+
+    <TextView
+        android:id="@+id/textView7"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="1dp"
+        android:text="Guias"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/rvPadre" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvPadre2"
+        android:layout_width="313dp"
+        android:layout_height="210dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.285"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView7"
         tools:listitem="@layout/adapter_activity_alumno" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
