--- a/app/src/main/res/layout/activity_main_maestro_ajustes.xml
+++ b/app/src/main/res/layout/activity_main_maestro_ajustes.xml
@@ -104,11 +104,11 @@
         android:id="@+id/img_master"
         android:layout_width="82dp"
         android:layout_height="86dp"
-        android:layout_marginTop="36dp"
+        android:layout_marginTop="85dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.534"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btn_cambiarimagen"
+        app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@android:drawable/ic_menu_help" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
